--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export" : "next export", 
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
+    "mongodb": "^5.8.1",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
+    "react-syntax-highlighter": "^15.5.0"
   }
 }
